--- a/app/views/pages/show_profile.html.erb
+++ b/app/views/pages/show_profile.html.erb
@@ -17,7 +17,7 @@
     </tr>
     <tr>
       <th>My profile picture: </th>
-      <td> <%= render 'shared/avatar_small' %></td>
+      <td> <%= render 'shared/avatar_large' %></td>
     </tr>
     <tr>
       <th>My age: </th>
