--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -58,15 +58,29 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+}
 
-  .password-btn {
-    color: $gray;
-    font-style: italic;
-    margin: 0 auto;
-  }
+.password-btn {
+  color: $gray;
+  margin: 0 auto;
+}
 
-  .password-btn:hover {
-    text-decoration: none;
-    color: $orange;
-  }
+.password-btn:hover {
+  text-decoration: none;
+  color: $orange;
+}
+
+.btn-edit-user {
+  font-size: 16px;
+  font-family: 'Exo 2', sans-serif;
+  background-color: white;
+  color: $gray;
+  border-radius: 10px;
+  text-decoration: none;
+  margin-top: 10px;
+  filter: brightness(97%);
+}
+
+.btn-edit-user:hover {
+  color: $orange;
 }
