--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -21,6 +21,12 @@ h3 {
   display: block;
 }
 
+.container-edit-form {
+  width: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 // CARDS HOME
 
 .cards {
