--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,32 +6,40 @@
     <% @activities.each do |activity| %>
 
       <%= link_to activity do %>
-        <div class="card-index zoom">
-          <% if activity.photo_db.nil? %>
-            <%= cl_image_tag activity.photo_user, class: 'card-index-img' %>
-          <% else %>
-            <%= image_tag activity.photo_db, class: 'card-index-img' %>
-          <% end %>
-          <div class="card-index-infos">
-            <h3><%= activity.name %></h3>
-            <p>
-              <%=activity.healths.map(&:description).join(' / ') %>
-            </p>
-          <% end %>
-            <% if activity.owner != current_user %>
-              <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
-                <%= link_to "♡", activity_interest_path(activity), method: :post,  class: "admin-btn" %>
-              <% else %>
-                <%= link_to "♥", activity_interest_path(activity), method: :delete,  class: "admin-btn" %>
-              <% end %>
+        <div class="card-index zoom d-flex justify-content-between">
+          <div class="card-images">
+            <% if activity.photo_db.nil? %>
+              <%= cl_image_tag activity.photo_user, class: "card-index-img" %>
+            <% else %>
+              <%= image_tag activity.photo_db, class: "card-index-img" %>
             <% end %>
           </div>
-          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
-          <div class="card-btns-index">
-        <%= link_to "Register", activity_booking_path(activity), method: :post, class: 'btn admin-btn' %>
-      </div>
-      </div>
-          <div>
+
+          <div class="card-index-infos d-flex justify-content-between">
+            <div>
+              <h3><%= activity.name %></h3>
+              <p class="avatar-name"><%= cl_image_tag activity.owner.avatar, class: 'avatar' %>
+                <%= activity.owner.username %>
+              </p>
+              <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
+              <% end %>
+            </div>
+
+            <div class="card-index-tags">
+              <div>
+                <% if activity.owner != current_user %>
+                  <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
+                    <%= link_to "♡", activity_interest_path(activity), method: :post,  class: "admin-btn" %>
+                  <% else %>
+                    <%= link_to "♥", activity_interest_path(activity), method: :delete,  class: "admin-btn" %>
+                  <% end %>
+                <% end %>
+              </div>
+              <div class="card-btns-index">
+                <%= link_to "Register", activity_booking_path(activity), method: :post, remote: true, class: 'btn admin-btn' %>
+              </div>
+            </div>
+          </div>
         </div>
     <% end %>
   </div>
