fixed small bugs

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="banner-link-items ">
-    <%= link_to "CoolFit", "#", class: "navbar-logo", style: "padding-left: 3vh;" %>
+    <%= link_to "CoolFit", activities_path, class: "navbar-logo", style: "padding-left: 3vh;" %>
 
     <div class="d-flex banner-item">
       <%= link_to "Locations", "#", class: "banner-item", style: "text-decoration: none;" %>
