--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-coolfit">
-  <%= link_to "CoolFit", root_path, class: "navbar-logo" %>
+  <%= link_to "CoolFit", activities_path, class: "navbar-logo" %>
 
     <div class="navbar flex flex-horizontal-center">
       <%= form_tag '#', method: :get, style:"width:100%" do %>
