--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -18,8 +18,9 @@
           <div class="card-index-infos d-flex justify-content-between">
             <div>
               <h3><%= activity.name %></h3>
-              <p class="avatar-name"><%= render 'shared/avatar_small' %></p>
-              </p>
+              <% if !current_user.nil? %>
+                <p class="avatar-name"><%= render 'shared/avatar_small' %></p>
+              <% end %>
               <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
               <% end %>
             </div>
