--- a/app/views/pages/show_profile.html.erb
+++ b/app/views/pages/show_profile.html.erb
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <th>My name:</th>
-      <td><%= current_user.first_name + " " + current_user.last_name%></td>
+      <td><%= current_user.name %></td>
     </tr>
     <tr>
       <th>My email:</th>
