--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,10 @@
     <%= f.error_notification %>
 
     <div class="form-inputs">
+      <%= f.input :username,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "username", style: "background-color: #4C4C4C; opacity: 0.7; border: none; outline: none; color: #C8C8C8;" } %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
@@ -22,12 +26,10 @@
     </div>
 
     <div class="form-actions text-central">
-      <%= f.button :submit, "Sign up", style: "color: #C8C8C8; font-family: 'Lato', 'sans-serif';" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-edit-user" %>
     </div>
   <% end %>
-
-  <div class="or-text">Or</div>
   <div class="hr"></div>
   <%= render "devise/shared/links" %>
-
+  <br>
 </div>
