--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -5,7 +5,7 @@
     <div class="d-flex banner-item">
       <%= link_to "Locations", "#", class: "banner-item", style: "text-decoration: none;" %>
       <% if current_user.nil? %>
-            <%= link_to "Sign in", new_user_registration_path, class: "banner-item" %>
+            <%= link_to "Sign up", new_user_registration_path, class: "banner-item" %>
       <% else %>
         <%= render 'shared/avatar_dropdown' %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
