--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,7 +29,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
         <% if current_user.nil? %>
-          <%= link_to "Sign in", new_user_session_path, class: "btn sign-in-btn" %>
+          <%= link_to "Sign up", new_user_session_path, class: "btn sign-in-btn" %>
         <% else %>
           <%= render 'shared/avatar_dropdown' %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
