--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -84,3 +84,21 @@
 .btn-edit-user:hover {
   color: $orange;
 }
+
+.register-btn {
+  font-size: 14px;
+  font-family: 'Exo 2', sans-serif;
+  background-color: white;
+  color: $dark-gray;
+  width: 100px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  filter: brightness(95%);
+  text-decoration: none;
+}
+
+.register-btn:hover {
+  color: $orange;
+  transition-delay: s150ms;
+  text-decoration: none;
+}
