--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -7,11 +7,8 @@
 }
 
 #map {
-
   width: 70vh;
   object-fit: cover;
-  position: sticky;
-  top: 0;
 }
 
 @media (min-width: 576px) {
@@ -24,4 +21,11 @@
   #map {
     display: block;
   }
+}
+
+.map {
+  height: 680px;
+  position: sticky;
+  top: 0;
+  z-index:-1;
 }
