--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,10 @@
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+
+}
+
 .navbar-coolfit {
   justify-content: space-between;
   background: $gray;
