--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -18,7 +18,8 @@
           <div class="card-index-infos d-flex justify-content-between">
             <div>
               <h3><%= activity.name %></h3>
-              <p class="avatar-name"><%= render 'shared/avatar_small' %></p>
+              <p class="avatar-name"><%= render 'shared/avatar_small' %>
+                <%= activity.owner.username %>
               </p>
               <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
               <% end %>
@@ -35,7 +36,7 @@
                 <% end %>
               </div>
               <div class="card-btns-index">
-                <%= link_to "Register", activity_booking_path(activity), method: :post, remote: true, class: 'btn admin-btn' %>
+                <%= link_to "Register", activity_booking_path(activity), method: :post, remote: true, class: 'btn register-btn' %>
               </div>
             </div>
           </div>
@@ -47,6 +48,8 @@
     id="map"
     data-markers="<%= @markers.to_json %>"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-  ></div>
+    class="map"
+  >
+  </div>
 
 </div>
