--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -7,7 +7,7 @@
 
       <%= link_to activity do %>
         <div class="card-index zoom d-flex justify-content-between">
-          <div class="card-images">
+          <div class="card-index-img">
             <% if activity.photo_db.nil? %>
               <%= cl_image_tag activity.photo_user, class: "card-index-img" %>
             <% else %>
@@ -15,10 +15,10 @@
             <% end %>
           </div>
 
-          <div class="card-index-infos d-flex justify-content-between">
+          <div class="card-index-infos d-flex justify-content-start">
             <div>
               <h3><%= activity.name %></h3>
-              <p class="avatar-name"><%= render 'shared/avatar_small' %>
+              <p class="avatar-name">
                 <%= activity.owner.username %>
               </p>
               <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
@@ -26,16 +26,16 @@
             </div>
 
             <div class="card-index-tags">
-              <div>
+              <div class="interest-index">
                 <% if activity.owner != current_user %>
                   <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
-                    <%= link_to "♡", activity_interests_path(activity), method: :post,  class: "admin-btn" %>
+                    <%= link_to "♡", activity_interests_path(activity), method: :post,  class: "interest-btn" %>
                   <% else %>
-                    <%= link_to "♥", activity_interest_path(activity), method: :delete,  class: "admin-btn" %>
+                    <%= link_to "♥", activity_interest_path(activity), method: :delete,  class: "interest-btn-selected" %>
                   <% end %>
                 <% end %>
               </div>
-              <div class="card-btns-index">
+              <div class="card-btn-index">
                 <%= link_to "Register", activity_booking_path(activity), method: :post, remote: true, class: 'btn register-btn' %>
               </div>
             </div>
