--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-coolfit">
-  <%= link_to "CoolFit", root_path, class: "navbar-logo" %>
+<div class="navbar navbar-expand-sm navbar-coolfit">
+  <%= link_to "CoolFit", activities_path, class: "navbar-logo" %>
 
     <div class="navbar flex flex-horizontal-center">
       <%= form_tag '#', method: :get, style:"width:100%" do %>
@@ -29,7 +29,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
         <% if current_user.nil? %>
-          <%= link_to "Sign in", new_user_session_path, class: "btn sign-in-btn" %>
+          <%= link_to "Sign up", new_user_session_path, class: "btn sign-in-btn" %>
         <% else %>
           <%= render 'shared/avatar_dropdown' %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
