--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -3,8 +3,8 @@
   <%= render 'shared/avatar_large' %>
 </div>
 
-<h5>My fitness level: <%= current_user.physical_activity %></h5>
-<h5>My description: <%= current_user.description %></h5>
+<h5><strong>My fitness level: </strong><%= current_user.physical_activity %></h5>
+<h5><strong>My description: </strong><%= current_user.description %></h5>
 
 <br>
 
