--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -14,7 +14,6 @@
   margin-bottom: 10px;
   margin-top: 10px;
   margin-right: 10px;
-  flex-grow: 1;
 }
 
 .card-index-infos {
@@ -33,6 +32,10 @@
 
 .card-index-benef {
   color: $orange;
+}
+
+.card-index-tags {
+  margin-right: 10px;
 }
 
 .avatar-name {
