--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -5,8 +5,7 @@
   <div class="cards-index">
     <% @activities.each do |activity| %>
 
-      <%= link_to activity do %>
-        <div class="card-index zoom d-flex justify-content-between">
+        <div class="card-index zoom d-flex">
           <div class="card-index-img">
             <% if activity.photo_db.nil? %>
               <%= cl_image_tag activity.photo_user, class: "card-index-img" %>
@@ -19,11 +18,9 @@
             <div class="card-index-text">
               <h3><%= activity.name %></h3>
               <p class="avatar-name">
-                <%= activity.owner.username %>
+                <%= activity.owner.username %><%= render 'shared/avatar_small', activity: activity, img_html: {style:"margin-bottom: 5vh;"} %>
               </p>
-              <p class="avatar-name"><%= render 'shared/avatar_small', activity: activity %></p>
               <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
-              <% end %>
             </div>
           </div>
 
@@ -43,7 +40,7 @@
               </div>
             </div>
         </div>
-    <% end %>
+      <% end %>
   </div>
 
   <div
