--- a/app/views/bookings/_future_bookings.html.erb
+++ b/app/views/bookings/_future_bookings.html.erb
@@ -1,8 +1,10 @@
-<div class="card-dashboard" data-future-bookings-id="<%= activity.id %>">
+<div data-future-bookings-id="<%= activity.id %>">
 
   <%= render 'shared/card_index', activity: activity %>
+
 
   <div class="card-btns">
     <%= link_to "Unregister", activity_bookings_path(activity), method: :delete, remote: true, class: 'btn admin-btn' %>
   </div>
+
 </div>
