--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,5 +1,16 @@
 <p id="notice"><%= notice %></p>
 
+<div id = "capacity">
+  <h3>Number of spots available:</h3>
+    <% if @activity.max_capacity.nil? %>
+      <p>There is no limited number of participants!</p>
+    <% elsif @activity.bookings.size < @activity.max_capacity %>
+      <p>Hurry up, there are only <%= @activity.max_capacity - @activity.bookings.size %> spots left!</p>
+    <% else @activity.max_capacity = @activity.bookings.size %>
+      <p>Sorry the class is fully booked <% %></p>
+    <% end%>
+</div>
+
 <div class="container mt-4 show-container">
   <h3><strong><%= @activity.name %></strong></h3>
     <p style="float:right;"><i class="far fa-clock" style="margin-right: 1vh;"></i><%= @activity.duration %> Minutes</p>
@@ -34,7 +45,7 @@
 
         <%= render 'messages/show'%>
 
-        <% end %>
+        <% end%>
       </div>
 
       <% if user_signed_in? %>
@@ -46,5 +57,4 @@
     <%= link_to 'Edit', edit_activity_path(@activity), style: "margin-left: 30vh; color: #636363; text-decoration: none;" %> |
     <%= link_to 'Back', activities_path, style: "color: #636363; text-decoration: none;" %>
 </div>
-
 
