--- a/app/views/messages/_show.html.erb
+++ b/app/views/messages/_show.html.erb
@@ -1,4 +1,7 @@
+<p style= "font-size:20px"><strong>Conversation about <%= @activity.name %></strong></p>
+<hr size="6" width="100%" align="left" color="$gray">
 <% @activity.messages.each do |message| %>
-<p><%= message.owner.username %>: <%= message.content %></p>
+<p class= "content-chat"><strong><%= message.owner.username %>: </strong><%= message.content %></p>
+<hr size="6" width="100%" align="left">
 <% end %>
 
