--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,11 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<div class="container mt-4 show-container">
+<div class="container mt-6 show-container">
   <h3><strong><%= @activity.name %></strong></h3>
-    <p style="float:right;"><i class="far fa-clock" style="margin-right: 1vh;"></i><%= @activity.duration %> Minutes</p>
+  <hr size="6" width="100%" align="left" color="$gray">
+  <br>
+  <div class="show-tags">
+      <p><i class="far fa-clock" style="margin-right: 1vh;"></i><%= @activity.duration %> Minutes</p>
+      <div class="d-flex justify-content-start">
+        <% @activity.owner.average_owner_rating.times.each do |rate| %>
+          <i class="fas fa-star" style="color:#FA9800;"></i>
+        <% end %>
+        <% @activity.owner.star_to_5.times.each do |rate| %>
+          <i class="fas fa-star" style="color:#C8C8C8;"></i>
+        <% end %>
+      </div>
+      <div class="fitness">
+        <% @activity.fitness_level.times.each do |level|%>
+          <i class="fas fa-running"></i>
+        <% end %>
+      </div>
+      </div>
       <div class="container-infos">
         <p class="darker-span"><strong>General Description</strong></p>
         <p><%= @activity.description %></p>
+        <hr size="6" width="100%" align="left" color="$gray">
         <p class="darker-span"><strong>Expected Health Benefits</strong></p>
         <p><% @activity.healths.each do |health| %>
           <li>
@@ -13,6 +31,7 @@
           </li>
           <% end %>
        </p>
+       <hr size="6" width="100%" align="left" color="$gray">
         <p class="darker-span" ><strong>Where is it Happening?</strong></p>
       <div class="flex-container">
 
@@ -26,25 +45,25 @@
 
       </div>
       <br>
-
+      <br>
       <div id="messages">
         <% if @activity.messages.blank? %>
-          Write a Message to <%= @activity.name %>
+         <p style= "font-size:20px"><strong>Write a message to <%= @activity.name %></strong></p>
+         <hr size="6" width="100%" align="left" color="$gray">
         <% else %>
-
         <%= render 'messages/show'%>
-
         <% end %>
       </div>
 
       <% if user_signed_in? %>
         <%= render 'messages/form', activity: @activity, message: @message %>
       <% end %>
+      <br>
+    <%= link_to 'Edit', edit_activity_path(@activity), style: "color: #636363; text-decoration: none;" %> |
+    <%= link_to 'Back', activities_path, style: "color: #636363; text-decoration: none;" %>
 
     </div>
-    <br>
-    <%= link_to 'Edit', edit_activity_path(@activity), style: "margin-left: 30vh; color: #636363; text-decoration: none;" %> |
-    <%= link_to 'Back', activities_path, style: "color: #636363; text-decoration: none;" %>
+
 </div>
 
 
