--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,8 +1,9 @@
 <div class="banner">
   <div class="banner-link-items ">
-    <%= link_to "CoolFit", activities_path, class: "navbar-logo", style: "padding-left: 3vh;" %>
+    <%= link_to "CoolFit", root_path, class: "navbar-logo", style: "padding-left: 3vh;" %>
 
     <div class="d-flex banner-item">
+      <%= link_to "Browse", activities_path, class: "banner-item", style: "text-decoration: none;" %>
       <%= link_to "Locations", "#", class: "banner-item", style: "text-decoration: none;" %>
       <% if current_user.nil? %>
             <%= link_to "Sign up", new_user_registration_path, class: "banner-item" %>
