Done many many changes on show and home and index for mapbox only and navbar margins

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,8 @@
-.navbar {
-  position: sticky;
-  top: 0;
-  z-index: 1;
-}
-
 .navbar-coolfit {
   justify-content: space-between;
   background: $gray;
   height: 71px;
+  margin-bottom: 10px;
 }
 
 .navbar-coolfit .navbar-collapse {
