--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -14,7 +14,7 @@
 }
 
 .container-infos{
-  width: 50vh;
+  width: 100vh;
 }
 
 .flex-container{
@@ -43,6 +43,12 @@
 
 .navbar-coolfit {
  background: rgba(39, 39, 39, 0.7);
+}
+
+.show-logo {
+  height: 20px;
+  width: 20px;
+  margin-right: 10px
 }
 
 
