--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,10 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container mt-6 show-container">
+
   <h3><strong><%= @activity.name %></strong></h3>
   <hr size="6" width="100%" align="left" color="$gray">
-  <br>
-  <div class="show-tags">
+  <p>Event organized by <i><%= @activity.owner.username %></i></p>
+  <div class="show-tags d-flex justify-content-between">
       <p><i class="far fa-clock" style="margin-right: 1vh;"></i><%= @activity.duration %> Minutes</p>
       <div class="d-flex justify-content-start">
         <% @activity.owner.average_owner_rating.times.each do |rate| %>
@@ -20,15 +21,17 @@
         <% end %>
       </div>
       </div>
+      <br>
       <div class="container-infos">
         <p class="darker-span"><strong>General Description</strong></p>
         <p><%= @activity.description %></p>
         <hr size="6" width="100%" align="left" color="$gray">
         <p class="darker-span"><strong>Expected Health Benefits</strong></p>
         <p><% @activity.healths.each do |health| %>
-          <li>
+          <ul style="padding: 0px">
+            <%= image_tag health.logo, class: "show-logo" %>
           <%= health.description %>
-          </li>
+          </ul>
           <% end %>
        </p>
        <hr size="6" width="100%" align="left" color="$gray">
@@ -38,18 +41,17 @@
           <p><%= @activity.location %></p>
         </div>
             <div  class="container-map" id="map"
-            style="height: 160px; width: 250px;"
+            style="height: 160px; width: 100vh;"
             data-markers="<%= @markers.to_json %>"
             data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
             ></div>
 
       </div>
       <br>
-      <br>
+      <hr size="6" width="100%" align="left" color="$gray">
       <div id="messages">
         <% if @activity.messages.blank? %>
          <p style= "font-size:20px"><strong>Write a message to <%= @activity.name %></strong></p>
-         <hr size="6" width="100%" align="left" color="$gray">
         <% else %>
         <%= render 'messages/show'%>
         <% end %>
