cards styled on dashboard

--- a/app/views/activities/_future_activities.html.erb
+++ b/app/views/activities/_future_activities.html.erb
@@ -1,4 +1,5 @@
-<div class="card-dashboard" data-future-activities-id="<%= activity.id %>">
+<!-- <div class="card-dashboard" data-future-activities-id="<%= activity.id %>"> -->
+<div class="card-dashboard zoom d-flex">
 
   <%= render 'shared/card_index', activity: activity %>
 
