--- a/app/views/bookings/_past_bookings.html.erb
+++ b/app/views/bookings/_past_bookings.html.erb
@@ -1,4 +1,5 @@
-<div class="card-dashboard">
+<!-- <div class="card-dashboard"> -->
+<div class="card-dashboard zoom d-flex">
 
   <%= render 'shared/card_index', activity: booking.activity %>
 
@@ -6,5 +7,5 @@
     <!-- ADD LINK TO INPUT RATING HERE -->
     <%= render 'bookings/rating', booking: booking %>
   </div>
-
 </div>
+<!-- </div> -->
