--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -77,7 +77,6 @@
   display: flex;
   width: 120vh;
   overflow: hidden;
-
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 10px;
@@ -85,9 +84,17 @@
   margin-right: 10px;
 }
 
+.card-dashboard-img {
+
+  width: 190px;
+  object-fit: cover;
+}
+
+
+
 .card-btns {
   display: flex;
-  margin-left: 30px;
+  margin-left: auto;
   margin-right: 30px;
   flex-direction: column;
   align-self: center;
