--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,6 +1,11 @@
-<h1>New Activity</h1>
+<div class="container mt-4 container-edit-form">
+  <h3>Organize a new event!</h3>
 
-<%= render 'form', activity: @activity %>
+  <br>
 
-<%= link_to 'Back', activities_path %>
+  <%= render 'form', activity: @activity %>
 
+  <div style="text-align:right;">
+    <%= link_to 'Cancel', dashboard_owner_path, class: "password-btn" %>
+  </div>
+</div>
