--- a/app/views/interests/destroy.js.erb
+++ b/app/views/interests/destroy.js.erb
@@ -1,1 +1,7 @@
-document.querySelector("[data-interests-id='<%= @activity.id %>']").remove();
+if (document.querySelector("[data-interests-id='<%= @activity.id %>']")) {
+  document.querySelector("[data-interests-id='<%= @activity.id %>']").remove();
+} else {
+  document.querySelector("[data-activity-id='<%= @activity.id %>'] > a").innerHTML = "♡";
+  document.querySelector("[data-activity-id='<%= @activity.id %>'] > a").setAttribute('data-method', 'post');
+};
+
