--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -19,6 +19,10 @@
   </div>
 
   <div class="form-inputs">
+    <%= f.input :max_capacity, class: "form-control" %>
+  </div>
+
+  <div class="form-inputs">
     <%= f.input :fitness_level, class: "form-control" %>
   </div>
 
