--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,20 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container mt-6 show-container">
-<div id = "capacity">
-  <h3>Number of spots available:</h3>
-    <% if @activity.max_capacity.nil? %>
-      <p>There is no limited number of participants!</p>
-    <% elsif @activity.bookings.size < @activity.max_capacity %>
-      <p>Hurry up, there are only <%= @activity.max_capacity - @activity.bookings.size %> spots left!</p>
-    <% else @activity.max_capacity = @activity.bookings.size %>
-      <p>Sorry the class is fully booked <% %></p>
-    <% end%>
-</div>
 
 <div class="container mt-4 show-container">
   <h3><strong><%= @activity.name %></strong></h3>
-  <hr size="6" width="100%" align="left" color="$gray">
+  <hr size="6" width="100%" align="left" color="#C8C8C8">
   <p>Event organized by <i><%= @activity.owner.username %></i></p>
   <div class="show-tags d-flex justify-content-between">
       <p><i class="far fa-clock" style="margin-right: 1vh;"></i><%= @activity.duration %> Minutes</p>
@@ -36,7 +26,18 @@
       <div class="container-infos">
         <p class="darker-span"><strong>General Description</strong></p>
         <p><%= @activity.description %></p>
-        <hr size="6" width="100%" align="left" color="$gray">
+        <hr size="6" width="100%" align="left" color="#C8C8C8">
+        <div id = "capacity">
+          <p class="darker-span"><strong>Number of spots available:</strong></p>
+            <% if @activity.max_capacity.nil? %>
+              <p>There is no limited number of participants!</p>
+            <% elsif @activity.bookings.size < @activity.max_capacity %>
+              <p>Hurry up, there are only <%= @activity.max_capacity - @activity.bookings.size %> spots left!</p>
+            <% else @activity.max_capacity = @activity.bookings.size %>
+              <p>Sorry the class is fully booked <% %></p>
+            <% end%>
+        </div>
+        <hr size="6" width="100%" align="left" color="#C8C8C8">
         <p class="darker-span"><strong>Expected Health Benefits</strong></p>
         <p><% @activity.healths.each do |health| %>
           <ul style="padding: 0px">
@@ -45,7 +46,7 @@
           </ul>
           <% end %>
        </p>
-       <hr size="6" width="100%" align="left" color="$gray">
+       <hr size="6" width="100%" align="left" color="#C8C8C8">
         <p class="darker-span" ><strong>Where is it Happening?</strong></p>
       <div class="flex-container">
 
@@ -59,7 +60,7 @@
 
       </div>
       <br>
-      <hr size="6" width="100%" align="left" color="$gray">
+      <hr size="6" width="100%" align="left" color="#C8C8C8">
       <div id="messages">
         <% if @activity.messages.blank? %>
          <p style= "font-size:20px"><strong>Write a message to <%= @activity.name %></strong></p>
