--- a/app/views/bookings/_future_bookings.html.erb
+++ b/app/views/bookings/_future_bookings.html.erb
@@ -1,10 +1,9 @@
-<!-- <div data-future-bookings-id="<%= activity.id %>"> -->
-<div class="card-dashboard zoom d-flex">
+<div class="card-dashboard zoom d-flex" data-future-bookings-id="<%= activity.id %>">
   <%= render 'shared/card_index', activity: activity %>
 
-
   <div class="card-btns">
-    <%= link_to "Unregister", activity_bookings_path(activity), method: :delete, remote: true, class: 'btn admin-btn' %>
+    <%= link_to "Unregister", activity_booking_path(activity.id, booking), method: :delete, remote: true, class: 'btn admin-btn' %>
   </div>
 
- </div>
+</div>
+
