--- a/app/views/interests/_interests.html.erb
+++ b/app/views/interests/_interests.html.erb
@@ -1,5 +1,4 @@
-<!-- <div class="card-dashboard" data-interests-id="<%= activity.id %>"> -->
-<div class="card-dashboard zoom d-flex">
+<div class="card-dashboard zoom d-flex" data-interests-id="<%= activity.id %>">
 
   <%= render 'shared/card_index', activity: activity %>
 
