--- a/app/views/shared/_card_index.html.erb
+++ b/app/views/shared/_card_index.html.erb
@@ -1,21 +1,19 @@
-
-
-    <div class="card-dashboard-img">
-      <% if activity.photo_db.nil? %>
-        <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
-      <% else %>
-        <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
-      <% end %>
-    </div>
- <div class="card-index-infos">
-     <div class="card-dashboard-text">
-        <h3><%= activity.name %></h3>
-        <p class="avatar-name-dashboard" style="font-size: 16px;">
-            <%= render 'shared/avatar_small', activity: activity, img_html: {style:"margin-bottom: 5vh;"} %><%= activity.owner.username %>
-        </p>
-        <p class="card-index-benef" style="margin-top: 3vh;font-size: 16px;"><%=activity.healths.map(&:description).join(' / ') %></p>
-      </div>
+<div class="card-dashboard-img">
+  <% if activity.photo_db.nil? %>
+    <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
+  <% else %>
+    <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
+  <% end %>
+</div>
+<div class="card-index-infos">
+  <div class="card-dashboard-text">
+    <h3 class="card-index-title"><%= link_to activity.name, activity_path(activity) %></h3>
+    <p class="avatar-name-dashboard" style="font-size: 16px;">
+        <%= render 'shared/avatar_small', activity: activity, img_html: {style:"margin-bottom: 5vh;"} %><%= activity.owner.username %>
+    </p>
+    <p class="card-index-benef" style="margin-top: 3vh;font-size: 16px;"><%=activity.healths.map(&:description).join(' / ') %></p>
   </div>
+</div>
 
 
 
