mail redirecting to dashboard2

--- a/app/views/booking_mailer/create_confirmation.html.erb
+++ b/app/views/booking_mailer/create_confirmation.html.erb
@@ -3,4 +3,7 @@
 
 <p> Your <%= @user.bookings.last.activity.name %>
   was just booked.
+
 </p>
+
+<%= link_to "Check it on your dashboard", dashboard_url %>
