--- a/app/views/pages/dashboard_organizer.html.erb
+++ b/app/views/pages/dashboard_organizer.html.erb
@@ -1,15 +1,11 @@
 <div class="d-flex justify-content-between">
-  <% if current_user == @user %>
-  <h1>See below the events you are organizing <span class="banner-logo"><%= @user.username %></span>!</h1>
-    <%= render 'shared/avatar_large' %>
-  <% else %>
-  <h1>See below the events <span class="banner-logo"><%= @user.username %></span> is organizing</h1>
-  <% end %>
+  <h1>See below the events you are organizing <span class="banner-logo"><%= current_user.username %></span>!</h1>
+  <%= render 'shared/avatar_large' %>
 </div>
 
 <br>
 
-<h5>Description: <%= @user.description %></h5>
+<h5>Description: <%= current_user.description %></h5>
 
 <h5>Specialty:
   <% if @specialty.empty? %>
@@ -20,10 +16,10 @@
 </h5>
 
 <h5>Average rating:
-  <% if @user.average_owner_rating.zero? %>
+  <% if current_user.average_owner_rating.zero? %>
     <em style="filter: brightness(150%);">no rating yet</em>
   <% else %>
-  <% @user.average_owner_rating.times do %>
+  <% current_user.average_owner_rating.times do %>
     <i class="fas fa-star"></i>
   <% end %>
   <% end %>
@@ -31,14 +27,13 @@
 
 <br>
 
-<% if current_user == @user %>
-  <h5>Create your own events and bring people together around your favorite activities! <%= link_to "Create", new_activity_path, class:"btn admin-btn", style:"font-size: 20px"%></h5>
-<% end %>
+<h5>Create your own events and bring people together around your favorite activities! <%= link_to "Create", new_activity_path, class:"btn admin-btn", style:"font-size: 20px"%></h5>
+
 <br>
 
 <% if !@future_activities.empty? %>
   <div>
-    <h3> upcoming events</h3>
+    <h3>My upcoming events</h3>
 
     <div class="future-activities">
       <% @future_activities.each do |activity| %>
@@ -52,11 +47,7 @@
 
 <% if !@past_activities.empty? %>
   <div>
-    <% if current_user == @user %>
-        <h3>My past events</h3>
-    <% else %>
-      <h3>past events</h3>
-    <% end %>
+    <h3>My past events</h3>
 
     <div class="future-activities">
       <% @past_activities.each do |activity| %>
