--- a/app/views/activities/_future_activities.html.erb
+++ b/app/views/activities/_future_activities.html.erb
@@ -4,7 +4,9 @@
   <%= render 'shared/card_index', activity: activity %>
 
   <div class="card-btns">
-    <%= link_to "Edit", edit_activity_path(activity), class: 'btn admin-btn' %>
-    <%= link_to "Delete", activity_path(activity), method: :delete, remote: true, data: {confirm: "Are you sure?"}, class: 'btn admin-btn' %>
+    <% if current_user == @user %>
+      <%= link_to "Edit", edit_activity_path(activity), class: 'btn admin-btn' %>
+      <%= link_to "Delete", activity_path(activity), method: :delete, remote: true, data: {confirm: "Are you sure?"}, class: 'btn admin-btn' %>
+    <% end %>
   </div>
 </div>
