--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,8 +34,10 @@
         <% else %>
           <%= render 'shared/avatar_dropdown' %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <% if current_user.professional == false %>
             <%= link_to "My dashboard", dashboard_path, class: "dropdown-item" %>
-            <%= link_to "My organized events", dashboard_owner_path, class: "dropdown-item" %>
+            <% end %>
+            <%= link_to "My organized events", owner_dashboard_path(current_user), class: "dropdown-item" %>
             <%= link_to "My profile", profile_path, class: "dropdown-item" %>
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
